dist/softctf-glossary-shop/Deployment.glossary-shop-app.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glossary-shop-app
  namespace: softctf
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: softctf-glossary-shop-glossary-shop-deployment-c89cf6ce
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: softctf-glossary-shop-glossary-shop-deployment-c89cf6ce
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - secretRef:
                name: softctf-glossary-shop-glossary-shop-secret-c869a684
          image: ghcr.io/miello/softctf-glossary-shop:36fcf29144f324e003cc2ca3843e22674052559e
          imagePullPolicy: IfNotPresent
          name: glossary-shop-app
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
      dnsPolicy: ClusterFirst
      hostNetwork: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
