dist/softctf-glossary-shop/Deployment.glossary-shop-db.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glossary-shop-db
  namespace: softctf
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: softctf-glossary-shop-glossary-shop-db-deployment-c891a344
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: softctf-glossary-shop-glossary-shop-db-deployment-c891a344
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/miello/softctf-glossary-shop-db:36fcf29144f324e003cc2ca3843e22674052559e
          imagePullPolicy: IfNotPresent
          name: glossary-shop-db
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
      dnsPolicy: ClusterFirst
      hostNetwork: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
