dist/softctf-glossary-shop/Service.glossary-shop-db-service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: glossary-shop-db-service
  namespace: softctf
spec:
  externalIPs: []
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
  selector:
    cdk8s.io/metadata.addr: softctf-glossary-shop-glossary-shop-db-deployment-c891a344
  type: ClusterIP
