dist/softctf-glossary-shop/Service.glossary-shop-service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: glossary-shop-service
  namespace: softctf
spec:
  externalIPs: []
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: softctf-glossary-shop-glossary-shop-deployment-c89cf6ce
  type: ClusterIP
