dist/softctf-glossary-shop/Ingress.glossary-shop-ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-softctf
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: glossary-shop-ingress
  namespace: softctf
spec:
  rules:
    - host: softctf-glossary-shop.miello.dev
      http:
        paths:
          - backend:
              service:
                name: glossary-shop-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - softctf-glossary-shop.miello.dev
      secretName: glossary-shop-tls
